[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastai-book"
version = "0.2.0"
description = "Environment for going through fastai book"
authors = [
    "Pouya Rezaeifakhr <pouya@sonic.net>",
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1"
duckduckgo-search = "^6.2.0"
fastai = "^2.7.15"
jupyterlab = "^4.2.3"
ipython = "^8.26.0"
nbdev = "^2.3.25"
fastbook = "^0.0.29"
graphviz = "^0.20.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
sentencepiece = "^0.2.0"
matplotlib = "^3.9.1"
jupyterlab-widgets = "^3.0.11"

